# gguf-experiments

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  config.env.example  pyproject.toml
.claude/skills/: env-var-deprecation.md
docs/: CONCEPTS.md  TROUBLESHOOTING.md
scripts/: chat.sh  download-model.sh  query.sh  serve.sh  setup.sh
tests/: config.bats  download.bats  scripts.bats  test_helper.bash
